app/assets/stylesheets/checkrx.css.scss
/* Custom Css for global CheckRX usage */
*{
  font-family:'Lucida Grande',Verdana, sans-serif;
  font-size: 13px;
}
h1{
  font-size: 2.2em;
}
h2{
  font-size: 1.5em;
}
h3{
   font-size: 1em;
}
body{
  background-color: #2FA27C;
}
.banner-top{
  float: left;
  margin: 10px;
  height: 60px;
}
.banner-top a{
  text-decoration: none;
}
.banner-top .banner-icon img {
  height: 60px;
  width: 80px;
}
.banner-top .banner-title {
  font-family: Arial;
  color: #000000;
  font-weight: bold;
  font-size: 45px;
  height: 60px;
  margin-left: 80px;
  vertical-align: center;
  padding-top: 3px;
}
.user-menu{
  float: right;
  padding-right: 15px;
  padding-top: 10px;
  text-align: right;
}
.user-menu .button-holder{
  height: 30px;
}
.user-menu .tab-holder{
  padding-right:5px;
  padding-top: 19px;
}
.nav-tab {
  height: 25px;
  text-decoration: none;
  font-size: 14px;
  font-weight: bold;
  border-top: 2px solid #000000;
  border-left: 2px solid #000000;
  border-right: 2px solid #000000;
  border-top-left-radius: 12px;
  border-top-right-radius: 12px;
  padding: 4px 8px;
  background-color: #CCF0E4
}
.active-tab{
  background-color: #ffffff;
  color: #032016;
}
.main-body{
  clear: both;
  border: 2px #000000 solid;
  border-radius: 12px;
  margin: 10px;
  padding: 10px;
  background-color: #CCF0E4;
}
.main-footer{
	font-size: 12px;
	color: #000000;
	text-align: center;
}
a {
  color:#575757;
}
a.small-link{
  font-size:80%;
}
.nav-button, input[type=button], input[type=submit]{
  text-decoration: none;
  font-size: 11px;
  font-weight: bold;
  color: #CCF0E4;
  border: 1px solid #000000;
  border-radius: 12px;
  padding: 4px 8px;
  background-color: #575757;
  white-space: pre;
  font: -webkit-small-control;
  cursor: pointer;
}
.nav-active-action, input[type=submit]{
  background-color: #032016;
}
.nav-top-right {
  float: right;
}
input[type=button], input[type=submit]{
 margin-top: 5px;
 margin-bottom: 10px;
}
h2 {
  -webkit-margin-before: 0px;
}
#error_explanation {
  display: inline-block;
  border: 1px solid #EC5132;
  background-color: #F5CEC7;
  margin: 10px;
  padding: 10px;
  width: auto;
}
#error_explanation h2{
  font-size: 14px;
}
#error_explanation li{
  font-size: 12px;
}
.field_with_errors input, .field_with_errors select{
  border-color: #EC5132;
  background-color: #F5CEC7 !important;
}
.activity-feed {

}
.activity-date-group {
  font-size: 15px;
  font-weight: bold;
  color: #032016;
  text-decoration: underline;
}
.rx_alert_feed_item {
  padding-top: 10px;
  padding-bottom: 5px;
}
.rx_alert_feed_item .pull-left{
  font-weight: bold;
  padding-left: 5px;
}
.rx_alert_feed_item .pull-right{
  padding-left: 25px;
}
.rx_alert_feed_item .pull-right{
  font-size: 90%;
  font-style: italic;
}
.pharmacy-list-item{
  padding-top: 5px;
  padding-bottom: 5px;
}
.pharmacy-name a{
  font-size: 15px;
  font-weight: bold;
  color: #032016;
  text-decoration: underline;
}
.pharm-fields ul{
  list-style: none outside none;
  padding-left: 20px;
  margin-top: 5px;
  margin-bottom: 5px;
}
.pharm-fields .address-field{
  padding-left: 10px;
}

.pharmacy-list-item .pharmacy-name a{
  font-size: 15px;
  font-weight: bold;
  color: #032016;
  text-decoration: underline;
}
.pharmacy-list-item .pharm-fields ul{
  list-style: none outside none;
  padding-left: 20px;
  margin-top: 5px;
  margin-bottom: 5px;
  font-style: italic;
}
.pharmacy-list-item .pharm-fields .address-field{
  padding-left: 10px;
}

.alert-drug-details .nav-button{
  margin-left: 20px;
}

.pharm-recent{
  font-size: 15px;
  font-weight: bold;
  padding-top: 5px;
  text-decoration: underline;
}

.search-box{
  float: right;
  margin: 5px;
}

